# GaitAlgoKit

./: .gitignore  2_docker.md  3_ros2.md  MANIFEST.in  README.md  config.ini  control.sh  demo.py  docker-compose.yml  environment.yml  environments.yml  installed.txt  main.py  motor_controller_cli.py  pyproject.toml  requirements.txt  serial_port.py  setup.py  supervisor.py  supervisor_tm.py  wasd_two_motor.py
cpp_ver/: CMakeLists.txt
cpp_ver/include/: MotorController.h  MotorTypes.h  Robstride.h  SerialPort.h  device_handle.h
cpp_ver/src/: MotorController.cpp  Robstride.cpp  SerialPort.cpp  device_handle.cpp  main.cpp  supervisor.cpp
data/: 10_knee_10_left_hip.csv  10_knee_10_left_knee.csv  10_knee_10_right_hip.csv  10_knee_10_right_knee.csv  10_knee_1_left_hip.csv  10_knee_1_left_knee.csv  10_knee_1_right_hip.csv  10_knee_1_right_knee.csv  10_knee_2_left_hip.csv  10_knee_2_left_knee.csv  10_knee_2_right_hip.csv  10_knee_2_right_knee.csv  10_knee_3_left_hip.csv  10_knee_3_left_knee.csv  10_knee_3_right_hip.csv  10_knee_3_right_knee.csv  10_knee_4_left_hip.csv  10_knee_4_left_knee.csv  10_knee_4_right_hip.csv  10_knee_4_right_knee.csv  10_knee_5_left_hip.csv  10_knee_5_left_knee.csv  10_knee_5_right_hip.csv  10_knee_5_right_knee.csv  10_knee_6_left_hip.csv  10_knee_6_left_knee.csv  10_knee_6_right_hip.csv  10_knee_6_right_knee.csv  10_knee_7_left_hip.csv  10_knee_7_left_knee.csv  10_knee_7_right_hip.csv  10_knee_7_right_knee.csv  10_knee_8_left_hip.csv  10_knee_8_left_knee.csv  10_knee_8_right_hip.csv  10_knee_8_right_knee.csv  10_knee_9_left_hip.csv  (+763 more)
(+38 files in other folders)
